# blender-mcp

./: addon.py  pyproject.toml
src/blender_mcp/: server.py
